--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ cloudinary==1.44.0
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+gunicorn==23.0.0
 idna==3.10
 mailjet-rest==1.3.4
+packaging==25.0
 python-dotenv==1.1.0
 requests==2.32.3
 six==1.17.0
